[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "context-cannon"
version = "1.0.0"
description = "Payload generation that adapts to context and filters"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "invaen"}]
keywords = ["security", "payloads", "bug-bounty", "penetration-testing", "xss"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
context-cannon = "context_cannon:main"

[project.urls]
Homepage = "https://github.com/invaen/context-cannon"
Issues = "https://github.com/invaen/context-cannon/issues"
